--- a/app/package.json
+++ b/app/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-simple-import-sort": "^6.0.1",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "jest": "^29.5.0",
+    "nodemon": "^2.0.0",
     "node-fetch": "^2.6.1",
     "prettier": "^2.8.7",
     "ts-jest": "^29.0.5",
@@ -76,6 +77,7 @@
     "serve": "node dist/bin/soundbot.js",
     "start": "npm run build && npm run serve",
     "test": "jest",
-    "translations:download": "ts-node lib/downloadTranslations.ts"
+    "translations:download": "ts-node lib/downloadTranslations.ts",
+    "dev": "nodemon"
   }
 }
